.gitgnore all from log/errors/* but __init__.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-src/org.chillnvibe/scrapper/logs/errors/
+src/org.chillnvibe/scrapper/logs/errors
+!src/org.chillnvibe/scrapper/logs/errors/__init__.py
