--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-src/org.chillnvibe/scrapper/logs/errors
-src/org.chillnvibe/scrapper/__pycache__/
+src/scrapper/logs/errors
+src/scrapper/__pycache__/
 .idea/
-!src/org.chillnvibe/scrapper/logs/errors/__init__.py
+!src/scrapper/logs/errors/__init__.py
